Groq/rag-langchain-presidential-speeches.ipynb

--- a/Groq/rag-langchain-presidential-speeches.ipynb
+++ b/Groq/rag-langchain-presidential-speeches.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "mamba activate llama3\n",
     "\n",
-    "Ugh. Pinecone api has changed so this code is failing ... will look into later.\n"
+    "Ugh. Pinecone api has changed so this code is failing ... will look into later.\n",
+    "\n",
+    "Hmm ... let's see if we can get this to work with Chroma ... sigh, nope, still some issues ... yeah, gonna bail.\n"
    ]
   },
   {
@@ -24,7 +26,9 @@
     "# pip install pinecone-client\n",
     "# pip install langchain-community\n",
     "# pip install langchain-pinecone\n",
-    "# pip install tiktoken"
+    "# pip install tiktoken\n",
+    "\n",
+    "# pip install chromadb"
    ]
   },
   {
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b4679c23-7035-4276-b3d6-95cd89916477",
    "metadata": {},
    "outputs": [],
@@ -131,14 +135,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "14fd5b33-360e-4fbe-ad29-11d5f759b0d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "groq_api_key = os.getenv('GROQ_API_KEY')\n",
-    "pinecone_api_key = os.getenv('PINECONE_API_KEY')\n",
-    "\n",
+    "groq_api_key = os.getenv('GROQ_API_KEY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c982f57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pinecone_api_key = os.getenv('PINECONE_API_KEY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ff148ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "client = Groq(api_key = groq_api_key)\n",
     "model = \"llama3-8b-8192\""
    ]
@@ -172,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d1017409-cb0e-402b-9c53-c61729296bd2",
    "metadata": {},
    "outputs": [
@@ -298,7 +319,7 @@
        "4  https://millercenter.org/the-presidency/presid...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "39439748-8652-415d-a5e7-0f421a6ae30a",
    "metadata": {},
    "outputs": [],
@@ -337,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c6057e9f-874e-4d7a-9f3c-e411a9acbb2e",
    "metadata": {},
    "outputs": [
@@ -354,7 +375,7 @@
        "3420"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "20ba719b-9a03-437a-a665-a0bde9ec24cf",
    "metadata": {},
    "outputs": [
@@ -426,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "740cea0e-c568-4522-995b-2bc1b9f1d4d8",
    "metadata": {
     "scrolled": true
@@ -467,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e3315f7c-6523-4aca-a624-2e2076b3e6bf",
    "metadata": {},
    "outputs": [],
@@ -477,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "587efed4-1d6a-402e-9c47-7259fbe898be",
    "metadata": {},
    "outputs": [
@@ -512,17 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "159ace36-71bf-4af9-9719-83ba1182071f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'James Garfield\\'s views on civil service reform can be seen in his inaugural address on March 4, 1881. He emphasized the importance of regulating the civil service by law, stating that the \"civil service can never be placed on a satisfactory basis until it is regulated by law.\" He also proposed to fix the tenure of minor offices in Executive Departments and prescribe grounds for removals to ensure fairness and prevent abuse of power.\\n\\nGarfield believed that the civil service system should be reformed to ensure transparency and accountability. He said, \"I shall at the proper time ask Congress to fix the tenure of the minor offices of the several Executive Departments and prescribe the grounds upon which removals shall be made during the terms for which incumbents have been appointed.\"\\n\\nIn his address, Garfield also highlighted the need for \"honest and faithful service\" from executive officers, stating that the offices were created \"not for the benefit of incumbents or their supporters, but for the service of the Government.\" This suggests that Garfield envisioned a civil service system in which appointments were based on merit and expertise, rather than political favoritism or personal connections.\\n\\nOverall, Garfield\\'s views on civil service reform emphasize the importance of a transparent, accountable, and merit-based system, which aligns with the spirit of modern civil service reform efforts.'"
+       "'James Garfield\\'s views on civil service reform were evident in his inaugural address on March 4, 1881. He emphasized the need to regulate the civil service by law, stating:\\n\\n\"The civil service can never be placed on a satisfactory basis until it is regulated by law. For the good of the service itself, for the protection of those who are intrusted with the appointing power against the waste of time and obstruction to the public business caused by the inordinate pressure for place, and for the protection of incumbents against intrigue and wrong, I shall at the proper time ask Congress to fix the tenure of the minor offices of the several Executive Departments and prescribe the grounds upon which removals shall be made during the terms for which incumbents have been appointed.\"\\n\\nGarfield\\'s vision for civil service reform emphasized the importance of fixing the tenure of minor offices and establishing the grounds for removals during an appointee\\'s term. He believed that this would promote fairness, efficiency, and honesty in the government.'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "94d8ba00-4360-4313-a271-272013a74f66",
    "metadata": {},
    "outputs": [
@@ -659,6 +680,49 @@
     "\n",
     "### Use Chroma for open source option\n",
     "#docsearch = Chroma.from_documents(documents, embedding_function)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b534ce06",
+   "metadata": {},
+   "source": [
+    "Let's try Chroma, shall we ... "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ff05e938",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import chromadb\n",
+    "chroma_client = chromadb.Client()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a3b43103",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Client' object has no attribute 'from_documents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m### Use Chroma for open source option\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# docsearch = Chroma.from_documents(documents, embedding_function)\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m docsearch \u001b[38;5;241m=\u001b[39m \u001b[43mchroma_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_documents\u001b[49m(documents, embedding_function)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Client' object has no attribute 'from_documents'"
+     ]
+    }
+   ],
+   "source": [
+    "### Use Chroma for open source option\n",
+    "# docsearch = Chroma.from_documents(documents, embedding_function)\n",
+    "docsearch = chroma_client.from_documents(documents, embedding_function)"
    ]
   },
   {
