re-test running Llama 3.1/Fine_Tune_Llama_3_1_8B_with_Unsloth.ipynb

--- a/Llama 3.1/Fine_Tune_Llama_3_1_8B_with_Unsloth.ipynb
+++ b/Llama 3.1/Fine_Tune_Llama_3_1_8B_with_Unsloth.ipynb
@@ -4,6 +4,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "#### Friday, August 9, 2024\n",
+        "\n",
+        "Trying this again cuz I torched ALL the huggingface models and datasets I had sucking up over 1TB of disk space on KAUWITB.\n",
+        "\n",
+        "OK. The training runs ... BUT ... it is gonna take a really long time to finish (estimates at 7 hours, 22 minutes)... so gonna bail.\n",
+        "\n",
         "#### Monday, July 29, 2024\n",
         "\n",
         "[Fine-tune Llama 3.1 Ultra-Efficiently with Unsloth](https://huggingface.co/blog/mlabonne/sft-llama3)\n",
@@ -127,6 +133,76 @@
             "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.26.post1. FA2 = True]\n",
             " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n"
           ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "e6e190819b3c426b917357245dd872c9",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "model.safetensors:   0%|          | 0.00/5.70G [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "504f712e225b4700b0c43c7a7e9fcbbe",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "generation_config.json:   0%|          | 0.00/230 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "6169b1ac854f411b9df890d463654bd1",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "tokenizer_config.json:   0%|          | 0.00/50.6k [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "d35a004b93404239bcdd5b4f7d3ac7a1",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "tokenizer.json:   0%|          | 0.00/9.09M [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "c217de837ca84570ac4166cf13ca5924",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "special_tokens_map.json:   0%|          | 0.00/345 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -142,7 +218,9 @@
         "# 6.7s\n",
         "\n",
         "# First time download ... I had other downloads happening when I lauched this ... and Jack was also sucking up bandwidth ... \n",
-        "# 99m 0.0s\n"
+        "# 99m 0.0s\n",
+        "\n",
+        "# 8m 28.2s ... BELL fibre!\n"
       ]
     },
     {
@@ -154,7 +232,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Tue Jul 30 10:49:15 2024       \n",
+            "Fri Aug  9 15:29:03 2024       \n",
             "+---------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
             "|-----------------------------------------+----------------------+----------------------+\n",
@@ -162,12 +240,12 @@
             "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
             "|                                         |                      |               MIG M. |\n",
             "|=========================================+======================+======================|\n",
-            "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0 Off |                  N/A |\n",
-            "|  0%   40C    P8              N/A /  70W |    147MiB /  2048MiB |      0%      Default |\n",
+            "|   0  NVIDIA GeForce RTX 2070 ...    Off | 00000000:01:00.0  On |                  N/A |\n",
+            "| 25%   36C    P8               8W / 215W |     73MiB /  8192MiB |      0%      Default |\n",
             "|                                         |                      |                  N/A |\n",
             "+-----------------------------------------+----------------------+----------------------+\n",
             "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
-            "|  0%   32C    P2              50W / 450W |   6566MiB / 24564MiB |      0%      Default |\n",
+            "|  0%   37C    P8              13W / 450W |   6566MiB / 24564MiB |      0%      Default |\n",
             "|                                         |                      |                  N/A |\n",
             "+-----------------------------------------+----------------------+----------------------+\n",
             "                                                                                         \n",
@@ -176,10 +254,10 @@
             "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
             "|        ID   ID                                                             Usage      |\n",
             "|=======================================================================================|\n",
-            "|    0   N/A  N/A      1748      G   /usr/lib/xorg/Xorg                          137MiB |\n",
-            "|    0   N/A  N/A      1838      G   /usr/bin/gnome-shell                          5MiB |\n",
-            "|    1   N/A  N/A      1748      G   /usr/lib/xorg/Xorg                            4MiB |\n",
-            "|    1   N/A  N/A      5721      C   ...forge3/envs/unsloth_env2/bin/python     6546MiB |\n",
+            "|    0   N/A  N/A      1716      G   /usr/lib/xorg/Xorg                           61MiB |\n",
+            "|    0   N/A  N/A      1799      G   /usr/bin/gnome-shell                          8MiB |\n",
+            "|    1   N/A  N/A      1716      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+            "|    1   N/A  N/A     11936      C   ...forge3/envs/unsloth_env2/bin/python     6546MiB |\n",
             "+---------------------------------------------------------------------------------------+\n"
           ]
         }
@@ -266,21 +344,80 @@
       "metadata": {
         "id": "sqGnvaT8is-R"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "5bb007abe7bc470eb78b923627bb9664",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Downloading readme:   0%|          | 0.00/982 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "40f09a61a9b7480fa73ee82c13643487",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Downloading data:   0%|          | 0.00/117M [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "8ded9d6384ad426c86de73885c0e57c4",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Generating train split:   0%|          | 0/100000 [00:00<?, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "dataset = load_dataset(\"mlabonne/FineTome-100k\", split=\"train\")\n",
         "\n",
         "# 1.3s\n",
         "\n",
         "# initial download of the dataset\n",
-        "# 1m 40.4s"
+        "# 1m 40.4s\n",
+        "# 12.4s ... BELL fibre!"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "f78aa62563934b7cb3abc8116b8963d3",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Map:   0%|          | 0/100000 [00:00<?, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "dataset = dataset.map(apply_template, batched=True)\n",
         "\n",
@@ -303,7 +440,22 @@
       "metadata": {
         "id": "gcPAQihcjcfl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "d4be1e88614444f38758cbf9365dbb3a",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Generating train split: 0 examples [00:00, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "trainer=SFTTrainer(\n",
         "    model=model,\n",
@@ -337,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -357,8 +509,7 @@
         {
           "data": {
             "text/html": [
-              "wandb version 0.17.5 is available!  To upgrade, please run:\n",
-              " $ pip install wandb --upgrade"
+              "Tracking run with wandb version 0.17.6"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -370,7 +521,7 @@
         {
           "data": {
             "text/html": [
-              "Tracking run with wandb version 0.16.5"
+              "Run data is saved locally in <code>/home/rob/Data/Documents/Github/rkaunismaa/Llama-3-Playground/Llama 3.1/wandb/run-20240809_153105-dfxk8ntq</code>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -382,19 +533,7 @@
         {
           "data": {
             "text/html": [
-              "Run data is saved locally in <code>/home/rob/Data/Documents/Github/rkaunismaa/Llama-3-Playground/Llama 3.1/wandb/run-20240729_185317-ij5ubhk4</code>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/robkayinto/huggingface/runs/ij5ubhk4/workspace' target=\"_blank\">output</a></strong> to <a href='https://wandb.ai/robkayinto/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+              "Syncing run <strong><a href='https://wandb.ai/robkayinto/huggingface/runs/dfxk8ntq' target=\"_blank\">output</a></strong> to <a href='https://wandb.ai/robkayinto/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -418,7 +557,7 @@
         {
           "data": {
             "text/html": [
-              " View run at <a href='https://wandb.ai/robkayinto/huggingface/runs/ij5ubhk4/workspace' target=\"_blank\">https://wandb.ai/robkayinto/huggingface/runs/ij5ubhk4/workspace</a>"
+              " View run at <a href='https://wandb.ai/robkayinto/huggingface/runs/dfxk8ntq' target=\"_blank\">https://wandb.ai/robkayinto/huggingface/runs/dfxk8ntq</a>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -433,8 +572,8 @@
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='5' max='1812' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [   5/1812 00:44 < 7:21:44, 0.07 it/s, Epoch 0.00/1]\n",
+              "      <progress value='15' max='1812' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [  15/1812 03:11 < 7:20:11, 0.07 it/s, Epoch 0.01/1]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -454,7 +593,47 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <td>3</td>\n",
-              "      <td>1.149200</td>\n",
+              "      <td>1.149300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>4</td>\n",
+              "      <td>1.133100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>5</td>\n",
+              "      <td>1.001500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>6</td>\n",
+              "      <td>1.020100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>7</td>\n",
+              "      <td>0.939000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>8</td>\n",
+              "      <td>0.949000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>9</td>\n",
+              "      <td>0.893600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>10</td>\n",
+              "      <td>0.944000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>11</td>\n",
+              "      <td>0.893500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>12</td>\n",
+              "      <td>0.879800</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>13</td>\n",
+              "      <td>0.884100</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
@@ -473,7 +652,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
             "File \u001b[0;32m<string>:126\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(self, resume_from_checkpoint, trial, ignore_keys_for_eval, **kwargs)\u001b[0m\n",
             "File \u001b[0;32m<string>:363\u001b[0m, in \u001b[0;36m_fast_inner_training_loop\u001b[0;34m(self, batch_size, args, resume_from_checkpoint, trial, ignore_keys_for_eval)\u001b[0m\n",
             "File \u001b[0;32m~/miniforge3/envs/unsloth_env2/lib/python3.10/site-packages/transformers/trainer.py:3349\u001b[0m, in \u001b[0;36mTrainer.training_step\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m   3347\u001b[0m         scaled_loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m   3348\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 3349\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maccelerator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mloss\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3351\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m loss\u001b[38;5;241m.\u001b[39mdetach() \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs\u001b[38;5;241m.\u001b[39mgradient_accumulation_steps\n",
@@ -486,6 +665,7 @@
         }
       ],
       "source": [
+        "# This launches and runs just fine, but I am gonna interrupt the process, just cuz it's gonna take so long ... \n",
         "trainer.train()"
       ]
     },
