--- a/unified-tool-calling.ipynb
+++ b/unified-tool-calling.ipynb
@@ -40,6 +40,40 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+            "To disable this warning, you can either:\n",
+            "\t- Avoid using `tokenizers` before the fork if possible\n",
+            "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "models--NousResearch--Hermes-2-Pro-Llama-3-8B\n",
+            "models--unslothai--1\n",
+            "models--unslothai--other\n",
+            "models--unslothai--repeat\n",
+            "models--unslothai--vram-24\n",
+            "models--unsloth--Meta-Llama-3.1-8B-bnb-4bit\n",
+            "models--unsloth--Mistral-Nemo-Instruct-2407-bnb-4bit\n",
+            "version.txt\n"
+          ]
+        }
+      ],
+      "source": [
+        "! ls ~/.cache/huggingface/hub"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "qq_TE-iBfdJR"
