another test run

--- a/Fine-Tuning 1B LLaMA 3.2: A Comprehensive Step-by-Step Guide with Code.ipynb
+++ b/Fine-Tuning 1B LLaMA 3.2: A Comprehensive Step-by-Step Guide with Code.ipynb
@@ -10,12 +10,14 @@
     "\n",
     "mamba activate unsloth_env2\n",
     "\n",
-    "OK! Got this to run with a smaller batch size, but it is going to take a very long time to run, so aborting ... "
+    "OK! Got this to run with a smaller batch size, but it is going to take a very long time to run, so aborting ... \n",
+    "\n",
+    "Whelp, actually, it starts the training, and then just quietly stops running without any error messages ... meh for now. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +26,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,13 +298,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b922dc0621094f55b132d2d6e08a1c3d",
+       "model_id": "c090680ea89a4e409d8db63e1421ed01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +404,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/rob/Data/Documents/Github/rkaunismaa/Llama-3-Playground/wandb/run-20241014_114940-w257aksh</code>"
+       "Run data is saved locally in <code>/home/rob/Data/Documents/Github/rkaunismaa/Llama-3-Playground/wandb/run-20241014_121056-c1e56glq</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -414,7 +416,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/robkayinto/huggingface/runs/w257aksh' target=\"_blank\">output</a></strong> to <a href='https://wandb.ai/robkayinto/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/robkayinto/huggingface/runs/c1e56glq' target=\"_blank\">output</a></strong> to <a href='https://wandb.ai/robkayinto/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -438,7 +440,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/robkayinto/huggingface/runs/w257aksh' target=\"_blank\">https://wandb.ai/robkayinto/huggingface/runs/w257aksh</a>"
+       " View run at <a href='https://wandb.ai/robkayinto/huggingface/runs/c1e56glq' target=\"_blank\">https://wandb.ai/robkayinto/huggingface/runs/c1e56glq</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -453,8 +455,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='9' max='280' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  9/280 01:48 < 1:10:11, 0.06 it/s, Epoch 1.12/40]\n",
+       "      <progress value='5' max='280' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  5/280 00:46 < 1:11:25, 0.06 it/s, Epoch 0.56/40]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -474,23 +476,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2.132700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2.069000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>2.086600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>2.094900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>2.087200</td>\n",
+       "      <td>2.132600</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
